<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CommFree</string>
    <string name="freechat">CommFree</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="login_welcome">Please Login</string>
    <string name="label_password">Password</string>
    <string name="label_phone">Phone</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_name">Name</string>
    <string name="label_update_info">Information Update</string>
    <string name="label_desc">Description</string>
    <string name="label_submit">Submit</string>
</resources>