<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    tools:context="com.mobile.myApp.fragments.account.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/len_28"
        android:paddingTop="@dimen/len_40"
        app:title="@string/label_register"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/len_16"
        android:layout_marginRight="@dimen/len_16"
        android:layout_marginTop="@dimen/len_16"
        android:background="@drawable/bg_account_input"
        android:orientation="vertical"
        android:paddingBottom="@dimen/len_8"
        android:paddingTop="@dimen/len_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">


            <net.qiujuer.genius.ui.widget.ImageView
                android:layout_width="@dimen/len_20"
                android:layout_height="@dimen/len_20"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_8"
                android:layout_marginRight="@dimen/len_8"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_phone"
                app:tint="@color/black_alpha_48" />

            <net.qiujuer.genius.ui.widget.EditText
                android:id="@+id/edit_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/label_phone"
                android:inputType="phone"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/black_alpha_64"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textSize="@dimen/font_14" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/len_2"
            android:layout_marginEnd="@dimen/len_8"
            android:layout_marginStart="@dimen/len_44"
            android:layout_marginTop="@dimen/len_2"
            android:background="@color/black_alpha_32" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">


            <net.qiujuer.genius.ui.widget.ImageView
                android:layout_width="@dimen/len_20"
                android:layout_height="@dimen/len_20"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_8"
                android:layout_marginRight="@dimen/len_8"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_pwd"
                app:tint="@color/black_alpha_48" />

            <net.qiujuer.genius.ui.widget.EditText
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/black_alpha_64"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textSize="@dimen/font_14" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/len_2"
            android:layout_marginEnd="@dimen/len_8"
            android:layout_marginStart="@dimen/len_44"
            android:layout_marginTop="@dimen/len_2"
            android:background="@color/black_alpha_32" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">


            <net.qiujuer.genius.ui.widget.ImageView
                android:layout_width="@dimen/len_20"
                android:layout_height="@dimen/len_20"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_8"
                android:layout_marginRight="@dimen/len_8"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_name"
                app:tint="@color/black_alpha_48" />

            <net.qiujuer.genius.ui.widget.EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/label_name"
                android:inputType="text"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/black_alpha_64"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textSize="@dimen/font_14" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/len_16"
        android:paddingEnd="@dimen/len_16"
        android:paddingStart="@dimen/len_16"
        android:id="@+id/go_login">

        <net.qiujuer.genius.ui.widget.TextView
            android:id="@+id/txt_go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/len_36"
            android:gravity="center"
            android:text="@string/label_login"
            android:textColor="@color/black_alpha_128"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />


        <net.qiujuer.genius.ui.widget.ImageView
            android:id="@+id/button_go_login"
            android:layout_width="@dimen/len_20"
            android:layout_height="@dimen/len_20"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_right_arrow"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/black_alpha_128" />

    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/len_28">


        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/len_172"
            android:layout_height="@dimen/len_44"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/sel_btn_bg_black_alpha_44"
            android:text="@string/label_register"
            android:textColor="@color/white"
            app:gTouchColor="@color/white_alpha_48"
            app:gTouchCornerRadius="22dp"
            app:gTouchEffect="ripple" />


        <net.qiujuer.genius.ui.widget.Loading
            android:id="@+id/loading"
            android:layout_width="@dimen/len_36"
            android:layout_height="@dimen/len_36"
            android:layout_gravity="center"
            app:gAutoRun="false"
            app:gBackgroundColor="@color/trans"
            app:gForegroundColor="@color/white"
            app:gForegroundLineSize="1dp" />
    </FrameLayout>
</LinearLayout>
