<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bt_open"
    tools:context="com.mobile.myApp.fragments.account.UpdateInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/statusBarSize"
        android:paddingBottom="@dimen/len_32">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/label_update_info"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
            app:titleTextColor="@color/white_alpha_160" />


        <com.mobile.util.widget.PortraitView
            android:id="@+id/im_portrait"
            android:layout_width="@dimen/len_92"
            android:layout_height="@dimen/len_92"
            android:layout_marginStart="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="0dp"
            android:src="@drawable/portrait"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <!-- 定义一组单选框 -->
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_portrait">
            <!-- 定义两个单选框 -->
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white_alpha_160"
                android:checked="true"
                android:text="Male"
                android:layout_marginStart="20dp"
                android:textColor="@color/white_alpha_160" />
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white_alpha_160"
                android:text="Female"
                android:layout_marginStart="@dimen/len_100"
                android:layout_marginTop="-32dp"
                android:textColor="@color/white_alpha_160" />
        </RadioGroup>

        <net.qiujuer.genius.ui.widget.ImageView
            android:id="@+id/im_sex"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:padding="3dp"
            android:src="@drawable/ic_man"
            app:layout_constraintBottom_toBottomOf="@+id/im_portrait"
            app:layout_constraintEnd_toEndOf="@+id/im_portrait" />

        <net.qiujuer.genius.ui.widget.EditText
            android:id="@+id/edit_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/label_desc"
            android:inputType="textMultiLine"
            android:maxLength="64"
            android:maxLines="2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white_alpha_160"
            android:textColorHint="@color/white_alpha_160"
            android:textSize="@dimen/font_16"
            app:gHintTitle="none"
            app:gLineColor="@color/white_alpha_160"
            app:gLineSize="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/len_28">

        <net.qiujuer.genius.ui.widget.Loading
            android:id="@+id/loading"
            android:layout_width="@dimen/len_36"
            android:layout_height="@dimen/len_36"
            android:layout_gravity="center"
            app:gAutoRun="false"
            app:gBackgroundColor="@color/trans"
            app:gForegroundColor="@color/white"
            app:gForegroundLineSize="1dp" />
    </FrameLayout>

    <net.qiujuer.genius.ui.widget.Button
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/len_172"
        android:layout_height="@dimen/len_44"
        android:layout_gravity="center"
<<<<<<< HEAD
        android:layout_marginTop="@dimen/len_40"
=======
        android:layout_marginTop="@dimen/len_56"
>>>>>>> 16b0d4c (fix bugs-Final version)
        android:layout_marginBottom="@dimen/len_20"
        android:background="@drawable/sel_btn_bg_black_alpha_44"
        android:gravity="center"
        android:text="@string/label_submit"
        android:textColor="@color/white"
        app:gTouchColor="@color/colorAccentAlpha"
        app:gTouchCornerRadius="22dp"
        app:gTouchEffect="ripple" />

</FrameLayout>
